--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script type="module">
+      // import * as Magick from 'https://knicknic.github.io/wasm-imagemagick/magickApi.js';
+      // import * as Magick from './magickApi.js';
+      // window.magick = Magick;
+    </script>
   </body>
 </html>
