--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script type="module">
-      // import * as Magick from 'https://knicknic.github.io/wasm-imagemagick/magickApi.js';
-      // import * as Magick from './magickApi.js';
-      // window.magick = Magick;
+      import * as Magick from 'https://cdn.jsdelivr.net/npm/wasm-imagemagick/dist/bundles/magickApi.js';;
+      window.Magick = Magick;
     </script>
   </body>
 </html>
