--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <link rel="icon" type="image/svg+xml" href="/images/camel.svg" />
     <link href='https://fonts.googleapis.com/css?family=Noto Sans' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>animate your word</title>
+    <title>🪄 animate your word!</title>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZX8YGYVTSG"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-ZX8YGYVTSG');
+  </script>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
