--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/images/camel.svg" />
     <link href='https://fonts.googleapis.com/css?family=Noto Sans' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Dynamic Typography: Bringing Words to Life">
-    <meta name="keywords" content="animate your word, dynamic typography, text animation, text-to-video">
+    <meta name="description" content="Dynamic Typography: Bringing Words to Life via Video Diffusion Prior">
+    <meta name="keywords" content="animate your word, dynamic typography, video diffusion, text animation, text-to-video">
     <title>🪄 animate your word!</title>
   </head>
   <!-- Google tag (gtag.js) -->
